--- a/src/Components/common/Input/style.css
+++ b/src/Components/common/Input/style.css
@@ -7,6 +7,11 @@
     font-size: 1rem;
     width: 70%;
     margin-bottom: 1.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    margin-bottom: 20px;
 }
 
 .custom-input:focus{
