--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,9 @@ body {
 input {
   font-family: "Inter", sans-serif;
 }
+a{
+  text-decoration: none;
+}
 
 .input-wrapper{
   width:80vw;
@@ -28,7 +31,7 @@ input {
   justify-content: center;
   align-items: center;
   margin: 0 auto;
-  margin-top: 4rem;
+  margin-top: 2rem;
 
 }
 
@@ -36,4 +39,36 @@ input {
   font-size: 1.5rem;
   font-weight: 500;
   margin-bottom: 2rem;
+}
+
+.podcasts-flex{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1.5rem;
+  flex-wrap: wrap;
+}
+
+.banner-image{
+  background: linear-gradient(
+      177.7deg,
+      rgba(58, 129, 191, 0.3) 1.63%,
+      rgba(65, 48, 0.009) 148.18%
+  );
+  border-radius: 1rem;
+  padding: 0.5rem;
+  height: 300px;
+  width: 100%;
+}
+
+.banner-image img{
+  width: 100%;
+  height: 300px !important;
+  object-fit: fill;
+  border-radius: 1rem;
+}
+.podcast-description{
+  color: var(--purple-grey);
+  text-align: left !important;
+  width: 100%;
 }
