--- a/src/Components/common/Button/style.css
+++ b/src/Components/common/Button/style.css
@@ -8,8 +8,8 @@
     margin: 1rem;
     font-size: 1rem;
     font-weight: 500;
-    margin: auto;
-    margin-top: 10px;
+    /* margin: auto; */
+    /* margin-top: 5px; */
 }
 
 .custom-button:hover{
