--- a/src/index.css
+++ b/src/index.css
@@ -77,3 +77,12 @@ a{
   position: relative;
   left: 0;
 }
+
+.profile-details{
+  width:80vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin: 0 auto;
+}
