--- a/src/Components/common/Podcasts/AudioPlayer/style.css
+++ b/src/Components/common/Podcasts/AudioPlayer/style.css
@@ -3,7 +3,7 @@
     position: fixed;
     bottom: 0;
     left: 0;
-    padding: 1rem 0rem;
+    padding: 0.8rem 0rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -35,4 +35,10 @@
 
 .audio-btn{
     cursor: pointer;
+}
+
+@media screen, (min-width:450px) {
+    .custom-audio-player{
+        width: 100%;
+    }
 }
